# MicroStudioRuntime

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  game.js  mstest.js  premake5.lua
include/: AssetsManager.h  JS_API.h  MSAudioStream.h  MSMap.h  MSMusic.h  MSRuntime.h  MSSound.h  MSSprite.h  RenderingQueue.h  helpers.h
microstudio/: microengine_c.js
src/: AssetsManager.cpp  MSRuntime.cpp  RenderingQueue.cpp  main.cpp
